Fix frontend auth
